# TODO: Java / Maven build integration

EXTRA_DIST = README \
jNut/pom.xml \
jNut/README \
jNut/src/main/java/org/networkupstools/jnut/Client.java \
jNut/src/main/java/org/networkupstools/jnut/Command.java \
jNut/src/main/java/org/networkupstools/jnut/Device.java \
jNut/src/main/java/org/networkupstools/jnut/NutException.java \
jNut/src/main/java/org/networkupstools/jnut/StringLineSocket.java \
jNut/src/main/java/org/networkupstools/jnut/Variable.java \
jNut/src/test/java/org/networkupstools/jnut/ClientTest.java \
jNutList/pom.xml \
jNutList/README \
jNutList/src/main/java/org/networkupstools/jnutlist/AppList.java \
jNutList/src/test/java/org/networkupstools/jnuttest/AppTest.java
